zoom works and fixed grid alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,7 +45,7 @@ body {
 .container {
   display: grid;
   width: 100%;
-  max-width: 100%;
+  max-width: 90%;
   min-height: 500px;
   margin: auto;
   grid-column-gap: 10px;
@@ -53,6 +53,11 @@ body {
   grid-auto-flow: row;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
+
+.card-container {
+  position: relative;
+}
+
 .Card {
   width: 250px;
   height: 350px;
@@ -61,15 +66,17 @@ body {
   border-radius: 10px;
   overflow: hidden;
   justify-self: center;
-  margin: 30px;
+  margin: auto;
 }
 
 .zoomed {
   background-color: aquamarine;
-  transform: scale(2);
   position: fixed;
   top: 25%;
+  left: 50%;
   bottom: 50%;
+  transform: scale(2) translate(-25%, 0);
+  transform: translate(-50%, 0) scale(2);
   z-index: 99;
 }
 
